# PiCycle3.0

./: .gitignore  README.md  app.py  appliance_runtime.py  control.py  effort.py  picycle_appliance.py  pyproject.toml  requirements.txt  ride_session.py  runtime_modes.py  settings.json  storage.py
auto-install/: install.sh
common/: common.py
display/: base_240x320.py  headless.py  ili9341.py  prototype.py
docs/: metrics-calibration.md  storage.md
speed_input/: hall_sensor.py  prototype.py  speed_input_base.py
templates/: base.html  profile_new.html  profiles.html
tests/: test_app_profiles.py  test_display_profile_setup.py  test_effort.py  test_picycle_appliance.py  test_ride_session.py  test_speed_input.py  test_storage.py
tools/: prototype_smoke.py  runtime_smoke.py  smoke_imports.py
